Add barebones editor component (no functionality)

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -34,3 +34,12 @@
     scrollbar-width: none; /* Firefox */
   }
 }
+
+/* Placeholder */
+.ProseMirror p.is-editor-empty:first-child::before {
+  content: attr(data-placeholder);
+  float: left;
+  color: #adb5bd;
+  pointer-events: none;
+  height: 0;
+}
