Clean up, update atproto

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,7 +10,7 @@
 
   body {
     box-sizing: border-box;
-    font-family: "Inter", system-ui, -apple-system, sans-serif;
+    font-family: "Inter", -apple-system, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-rendering: optimizeLegibility;
