--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,12 +20,12 @@
 @layer utilities {
     /* hide scrollbar for Chrome, Safari and Opera */
     .no-scrollbar::-webkit-scrollbar {
-        display: none;
+        width: 0px;
+        height: 0px;
     }
 
     /* hide scrollbar for IE, Edge and Firefox */
     .no-scrollbar {
-        -ms-overflow-style: none; /* IE and Edge */
         scrollbar-width: none; /* Firefox */
     }
 }
