Fix incorrect colour token comments

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -56,37 +56,37 @@
         --color-background-base: 0, 0, 0; /* bg-black */
         --color-background-secondary: 38, 38, 38; /* bg-neutral-800 */
         --color-background-tertiary: 64, 64, 64; /* bg-neutral-700 */
-        --color-background-muted: 82, 82, 82; /* bg-neutral-200 */
-        --color-background-inverted: 245, 245, 245; /* bg-neutral-700 */
-        --color-background-inverted-muted: 212, 212, 212; /* bg-neutral-800 */
+        --color-background-muted: 82, 82, 82; /* bg-neutral-600 */
+        --color-background-inverted: 245, 245, 245; /* bg-neutral-100 */
+        --color-background-inverted-muted: 212, 212, 212; /* bg-neutral-300 */
         --color-background-overlay: 0, 0, 0; /* bg-black/50, alpha applied in config */
         --color-background-overlay-muted: 0, 0, 0; /* bg-black/80, alpha applied in config */
 
         /* Text */
-        --color-text-base: 245, 245, 245; /* text-neutral-700 */
-        --color-text-secondary: 212, 212, 212; /* text-neutral-500 */
-        --color-text-tertiary: 168, 162, 158; /* text-neutral-400 */
-        --color-text-base-inverted: 64, 64, 64; /* text-white */
+        --color-text-base: 245, 245, 245; /* text-neutral-100 */
+        --color-text-secondary: 212, 212, 212; /* text-neutral-300 */
+        --color-text-tertiary: 156, 163, 175; /* text-neutral-400 */
+        --color-text-base-inverted: 64, 64, 64; /* text-neutral-700 */
         --color-text-link-base: 191, 119, 255; /* primary-light */
         --color-text-link-base-hover: 169, 74, 255; /* primary */
 
         /* Border and outline */
-        --color-border-base: 64, 64, 64; /* border-neutral-200 */
-        --color-border-secondary: 163, 163, 163; /* border-neutral-600 */
-        --color-outline-base: 163, 163, 163; /* outline-neutral-400 NOT CHANGED */
+        --color-border-base: 64, 64, 64; /* border-neutral-700 */
+        --color-border-secondary: 163, 163, 163; /* border-neutral-400 */
+        --color-outline-base: 163, 163, 163; /* outline-neutral-400 */
 
         /* Icon */
-        --color-icon-base: 168, 162, 158; /* text-neutral-700 */
+        --color-icon-base: 168, 162, 158; /* text-neutral-400 */
         --color-icon-muted: 115, 115, 115; /* text-neutral-500 */
         --color-icon-inverted: 255, 255, 255; /* bg-white */
-        --color-icon-like: 239, 68, 68; /* text-red-600 */
-        --color-icon-repost: 74, 222, 128; /* text-green-600 */
+        --color-icon-like: 239, 68, 68; /* text-red-500 */
+        --color-icon-repost: 74, 222, 128; /* text-green-400 */
 
         /* Status */
-        --color-status-base: 168, 162, 158; /* text-neutral-600 */
+        --color-status-base: 168, 162, 158; /* text-neutral-400 */
         --color-status-success: 74, 222, 128; /* text-green-400 */
-        --color-status-warning: 251, 146, 60; /* text-orange-600 */
-        --color-status-danger: 239, 68, 68; /* text-red-600 */
+        --color-status-warning: 251, 146, 60; /* text-orange-400 */
+        --color-status-danger: 239, 68, 68; /* text-red-500 */
     }
 
     html {
