Adjust dim background colour

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -55,7 +55,7 @@
         /* Background */
         --color-background-base: 24, 5, 41; /* 180529 */
         --color-background-secondary: 38, 6, 64; /* 260640 */
-        --color-background-tertiary: 43, 25, 59; /* 2b193b */
+        --color-background-tertiary: 64, 41, 84; /* 402954 */
         --color-background-muted: 97, 86, 107; /* 61566b */
         --color-background-inverted: 245, 245, 245; /* bg-neutral-100 */
         --color-background-inverted-muted: 212, 212, 212; /* bg-neutral-300 */
